bin/testsuite/tests/compiler/src/errors/compiler5093.swg
#global testerror "Err0030"

#test
{
    var a: *s32
    var b: [*] s32
    b = a
}
